Fix spacing on game board by adjusting width and adding an auto width to smaller screen size media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,8 @@ i {
 
 #game-board {
     border-radius: 35px;
-    height: 600px;
+    height: auto;
+    width: 460px;
 }
 
 #icon-container {
@@ -307,6 +308,11 @@ i {
 
     .chef-image {
         height: 120px;
+    }
+
+    #game-board {
+        width: auto;
+        min-width: 260px;
     }
 
     #stats {
